Changelog for CmdArgs

    #295, make verbosity flags explicit
    #231, add support for Maybe
    #256, add --option=false support
    Complete rewrite to introduce Explicit module
0.1.1
    Start of changelog